Top image on index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 layout: home
 classes: wide
 header:
-    overlay_image: /assets/images/pexels-vitaly-vlasov-1342460.jpg
-    caption: "Photo credit: Vitaly Vlasov"
+    overlay_image: /assets/images/topbar.png # https://www.pexels.com/photo/grayscale-photo-of-computer-laptop-near-white-notebook-and-ceramic-mug-on-table-169573/
+    caption: "Photo credit: Negative Space"
+    overlay_filter: 0.5
 author_profile: true
 ---
