Optimized the size of the topbar image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 layout: home
 classes: wide
 header:
-    overlay_image: /assets/images/topbar.png # https://www.pexels.com/photo/grayscale-photo-of-computer-laptop-near-white-notebook-and-ceramic-mug-on-table-169573/
+    overlay_image: /assets/images/topbar.jpg # https://www.pexels.com/photo/grayscale-photo-of-computer-laptop-near-white-notebook-and-ceramic-mug-on-table-169573/
     caption: "Photo credit: Negative Space"
     overlay_filter: 0.5
 author_profile: true
